# TribalMind

./: .gitignore  CHANGELOG.md  README.md  config.yaml.example  hatch_build.py  pyproject.toml  tribal.yaml.example
.github/: pull_request_template.md
.github/workflows/: bump-version.yml  ci.yml  release.yml
lib/tribalmind/: __init__.py  activity.py
lib/tribalmind/backboard/: assistants.py  client.py  memory.py  threads.py
lib/tribalmind/cli/: activity_cmd.py  agents_cmd.py  app.py  banner.py  completion_cmd.py  config_cmd.py  daemon_cmd.py  dir_picker.py  forget_cmd.py  init_cmd.py  install.py  prompts.py  recall_cmd.py  remember_cmd.py  shell_picker.py  status_cmd.py  team.py  ui_cmd.py  upgrade_cmd.py  version_check.py  watch_cmd.py
lib/tribalmind/config/: credentials.py  settings.py
lib/tribalmind/daemon/: client.py  manager.py  protocol.py  server.py
lib/tribalmind/graph/: inference.py  monitor.py  promotion.py  state.py  ui.py
lib/tribalmind/hooks/: bash_hook.sh  cmd_hook.cmd  cmd_send.py  cmd_wrapper.cmd  generator.py  powershell_hook.ps1  zsh_hook.zsh
lib/tribalmind/providers/: __init__.py  backboard_provider.py  base.py  factory.py  mem0_provider.py
lib/tribalmind/upstream/: github.py
lib/tribalmind/web/: server.py
src/tribalmind/: __init__.py
src/tribalmind/backboard/: assistants.py  client.py  memory.py  threads.py
src/tribalmind/cli/: app.py  daemon_cmd.py  install.py  team.py  ui_cmd.py  watch_cmd.py
src/tribalmind/config/: credentials.py  settings.py
src/tribalmind/daemon/: client.py  protocol.py  server.py
src/tribalmind/graph/: builder.py  context.py  inference.py  monitor.py  ui.py
src/tribalmind/hooks/: generator.py  powershell_hook.ps1  zsh_hook.zsh
src/tribalmind/upstream/: github.py
src/tribalmind/web/: server.py
tests/: conftest.py
tests/unit/: test_config.py
tests/unit/test_backboard/: test_client.py  test_memory.py
tests/unit/test_cli/: test_forget.py  test_init.py  test_recall.py  test_remember.py  test_status.py
tests/unit/test_daemon/: test_protocol.py  test_server.py
tests/unit/test_graph/: test_inference.py  test_monitor.py  test_promotion.py  test_state.py  test_ui.py
tests/unit/test_hooks/: test_generator.py
tests/unit/test_providers/: test_backboard_provider.py  test_base.py  test_factory.py
tests/unit/test_web/: test_activity_api.py
ui/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: Layout.tsx  LogViewer.tsx  Sidebar.tsx
ui/src/components/ui/: badge.tsx  button.tsx
ui/src/lib/: api.ts
ui/src/pages/: ActivityPage.tsx  AssistantsPage.tsx  LogsPage.tsx  MemoryPage.tsx  ThreadsPage.tsx
