[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tribalmind"
version = "2.0.0"
description = "Shared memory for AI development agents - remember, recall, and share knowledge across projects and teams"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "TribalMind Contributors" }]

dependencies = [
    "httpx>=0.27",
    "packaging>=24",
    "typer[all]>=0.12",
    "rich>=13",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "pyyaml>=6",
    "keyring>=25",
    "platformdirs>=4",
]

[project.optional-dependencies]
ui = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "respx>=0.21",
    "ruff>=0.3",
]

[project.scripts]
tribal = "tribalmind.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["lib/tribalmind"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
tag_format = "v{version}"
commit_message = "chore: release v{version} [skip ci]"
changelog_file = "CHANGELOG.md"
major_on_zero = false   # breaking changes on 0.x won't bump to 1.0 automatically

[tool.semantic_release.commit_parser_options]
# Commit types that trigger a release:
#   fix: ...        → patch  (0.1.0 → 0.1.1)
#   feat: ...       → minor  (0.1.0 → 0.2.0)
#   feat!: ...      → major  (0.1.0 → 1.0.0)
#   BREAKING CHANGE: in body → major
# No release: chore:, docs:, style:, refactor:, test:, ci:
allowed_tags = ["feat", "fix", "perf", "refactor"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "refactor"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
